[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retree"
version = "0.1.0"
description = "Reliability-guided tree memory for inductive multimodal knowledge graph completion"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["retree*"]
